--- a/.gitignore
+++ b/.gitignore
@@ -1,50 +1,103 @@
+# ==== IPAN Monorepo .gitignore (frontend React + backend FastAPI + workbench) ====
 
-.env
-.env.*
-# build/deps
-node_modules/
-dist/
-build/
-.cache/
-.next/
-.vite/
-**/node_modules/.vite/
-# Assistant snapshots
-_assistant_context/out/
-# env
-.env
-.env.local
-# build/deps
-node_modules/
-dist/
-build/
-.cache/
-.next/
-.vite/
-**/node_modules/.vite/
-# Assistant snapshots
-_assistant_context/out/
-# env
-.env
-.env.local
-
-# Node/Vite
-frontend/ipan/node_modules/
-frontend/ipan/dist/
-# Python venv
-.venv/
-# ENV
-.env
-.env.*
-# OS junk
+# --- OS / IDE ---
 .DS_Store
 Thumbs.db
+.idea/
+.vscode/*
+!.vscode/extensions.json
 
+# --- Logs ---
+logs/
+*.log
+*.log.*
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
 
-_assistant_context/
-Заметки.txt
+# --- Node / Frontend build caches ---
+node_modules/
+dist/
+build/
+.cache/
+.parcel-cache/
+.tmp/
+.temp/
+.vite/
+.eslintcache
+.stylelintcache
 
+# If there are nested frontend packages (e.g., frontend/ipan)
+frontend/**/node_modules/
+frontend/**/dist/
+frontend/**/build/
+frontend/**/.vite/
+frontend/**/.parcel-cache/
+frontend/**/.eslintcache
 
-# ignore loose notes at repo root
-/*.txt
+# --- Python / Backend (FastAPI) ---
+__pycache__/
+*.py[cod]
+*.so
+*.pyd
+*.pyo
+*.pyd
+*.egg-info/
+.eggs/
+.python-version
+.venv/
+venv/
+pip-wheel-metadata/
+.pytest_cache/
+.mypy_cache/
+.ruff_cache/
+.coverage
+.coverage.*
+htmlcov/
 
+# If backend is nested (e.g., backend/app)
+backend/**/__pycache__/
+backend/**/.pytest_cache/
+backend/**/.mypy_cache/
+backend/**/.ruff_cache/
+backend/**/.coverage
+backend/**/htmlcov/
+backend/**/*.egg-info/
+
+# --- Workbench / Laboratory ---
+workbench/drafts/
+workbench/**/_snapshots/
+
+# --- Environment & secrets ---
+.env
+.env.*
+!.env.example
+env/.env*
+!env/.env.example
+# If you keep a template for dev env, keep it tracked:
+!env/.env.development.example
+
+# --- Temporary / swap files ---
+tmp/
+temp/
+~$*
+*.swp
+*.swo
+*~
+
+# --- Coverage / reports ---
+coverage/
+*.lcov
+junit.xml
+
+# --- Local DB files ---
+*.sqlite
+*.sqlite3
+*.db
+
+# --- Misc archives (optional) ---
+*.tar
+*.tgz
+*.gz
+*.zip
